# Atlas

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.simulator  LICENSE  README.md  docker-compose-mqtt.yml  docker-compose.yml  pyproject.toml  pytest.ini  quick_start_web.ps1  render.yaml  requirements.txt  requirements_api.txt  requirements_dashboard.txt  requirements_streamlit.txt  setup.py  setup_web_app.ps1  start_all_services.ps1  start_option4.ps1  start_web_app.ps1
.streamlit/: config.toml
configs/: env_config.yaml  gat_config.yaml  gat_production_config.yaml  hybrid_config.yaml  phase3_gat_config.yaml  sim_config.yaml
data/processed/: extended_network_metrics.csv
docs/: API_GUIDE.md  DASHBOARD_GUIDE.md  DOCKER_GUIDE.md  HUGGINGFACE_GUIDE.md  MODEL_CARD.md  PHASE3_GUIDE.md  PHASE4_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
docs/guides/: CLI_MODEL_ACCESS.md  DOCUMENTATION_STRUCTURE.md  FILES_OVERVIEW.md  GAT_README.md  HOW_TO_RUN_CORRECTLY.md  INFERENCE_EXPLANATION.md  (+5 more)
notebooks/: eda.ipynb  model_analysis.ipynb
python_scripts/: README.md
reports/: README.md  efficient_gat_results.json  experiments.md  gat_allocation_results.json  gat_deployment_summary.json  model_comparison.md  phase3_gat_summary.json  simple_gat_results.json
scripts/: prepare_data.ps1  prepare_data.sh  run_baseline.ps1  run_baseline.sh  run_hybrid.ps1  run_hybrid.sh
src/: main.py
tests/: __init__.py  test_api.py  test_env.py  test_environment.py  test_integration.py  test_models.py
web-app/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+84 files in other folders)
